Added "|" symbol between links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </tbody>
   </table>
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="hobbies.html">My Hobbies | </a>
   <a href="contact-me.html">Contact me</a>
 </body>
 
